api for users data, categories and photos data

--- a/templates/pages/work.html
+++ b/templates/pages/work.html
@@ -9,6 +9,10 @@
     <link rel="stylesheet" href="{% static 'css/work.css' %}">
 {% endblock %}
 
+{% block scripts %}
+    <script href="{% static 'js/work.js' %}" ></script>
+{% endblock %}
+
 {% block site_content %}
     <div class="display-container">
         {% for category in categories %}
