--- a/templates/pages/work.html
+++ b/templates/pages/work.html
@@ -10,7 +10,7 @@
 {% endblock %}
 
 {% block scripts %}
-    <script href="{% static 'js/work.js' %}" ></script>
+    <script type="module" src="{% static 'js/views/categoryPage.js' %}"></script>
 {% endblock %}
 
 {% block site_content %}
